<resources>
    <string name="app_name">Control Eventos QR</string>


    //Actividad Login:
    <string name="login_btnIniciarSesion">Iniciar sesión</string>
    <string name="login_textInicioDeGoogle">Inicio de sesión de google</string>

    //Actividad Menu:
    <string name="menu_btnCrearEvento">Crear Evento</string>
    <string name="menu_btnListaEventos">Lista de eventos</string>
    <string name="menu_btnListaInvitaciones">Mis invitaciones</string>
    <string name="menu_btnEscanerQR">Escaner QR</string>

    //Actividad crear evento
    <string name="crearEvento_tileToolbar">Registro de nuevo evento</string>
    <string name="crearEvento_textNombre">Nombre</string>
    <string name="crearEvento_textHintNombre">Ingrese un nombre para el evento</string>
    <string name="crearEvento_textDescripcion">Descripción</string>
    <string name="crearEvento_textHintDescripcion">Ingrese una descripción para el evento</string>
    <string name="crearEvento_btnFecha">Fecha</string>
    <string name="crearEvento_textFecha">dd/mm/aaaa</string>
    <string name="crearEvento_btnHora">Hora</string>
    <string name="crearEvento_textHora">hh:mm</string>
    <string name="crearEvento_textDireccion">Ubicacion </string>



    //Menu
    <string name="menu_opcion1">Mis datos</string>
    <string name="menu_opcion2">Cerrar sesión</string>
    <string name="title_activity_maps">Map</string>

    //NOTIFICACIONES
    <string name="CHANNEL_NAME">GENERAL</string>
    <string name="CHANNEL_DESCRIPTION">Notificacines generales</string>

    //Actividad detalle evento
    <string name="detalleEvento_tvEvento">Nombre</string>
    <string name="detalleEvento_tvDescripcion">Descripción</string>
    <string name="detalleEvento_tvInvitados">Invitados</string>


</resources>
