<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.CrearEventoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/CrearEvento_textTitulo"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/crearEvento_textNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/crearEvento_textDescripcion"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="79dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/crearEvento_btnFecha"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/editText4"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/crearEvento_textFecha"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFecha"
        app:layout_constraintStart_toEndOf="@+id/btnFecha"
        app:layout_constraintTop_toTopOf="@+id/btnFecha" />

    <Button
        android:id="@+id/btnHora"
        android:layout_width="79dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/crearEvento_btnHora"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/btnFecha"
        app:layout_constraintTop_toBottomOf="@+id/btnFecha" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/crearEvento_textHora"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnHora"
        app:layout_constraintStart_toEndOf="@+id/btnHora"
        app:layout_constraintTop_toTopOf="@+id/btnHora" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/crearEvento_textDireccion"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/btnHora"
        app:layout_constraintTop_toBottomOf="@+id/btnHora" />

</androidx.constraintlayout.widget.ConstraintLayout>