<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.MenuActivity"
    android:background="@color/colorFondoMenu">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorMenu"
        android:backgroundTint="@color/colorFondoMenu"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="  "
        app:titleTextColor="@color/colorMenu" />

    <TextView
        android:id="@+id/tvAppNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name"
        android:textColor="@color/colorMenu"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorDivisorMenu"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorDivisorMenu"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvAppNameMenu"
        tools:layout_editor_absoluteX="0dp">

    </LinearLayout>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        tools:layout_editor_absoluteX="16dp"
        android:textColor="@color/colorMenu"/>

    <Button
        android:id="@+id/btn_crearEvento"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_menu"
        android:text="@string/menu_btnCrearEvento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        android:textColor="@color/colorTextBotonMenu"/>

    <Button
        android:id="@+id/btn_listaEventos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu_btnListaEventos"
        app:layout_constraintEnd_toEndOf="@+id/btn_crearEvento"
        app:layout_constraintStart_toStartOf="@+id/btn_crearEvento"
        app:layout_constraintTop_toBottomOf="@+id/btn_crearEvento"
        android:background="@drawable/btn_menu"
        android:textColor="@color/colorTextBotonMenu"
        />

    <Button
        android:id="@+id/btn_mis_invitaciones"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu_btnListaInvitaciones"
        app:layout_constraintEnd_toEndOf="@+id/btn_listaEventos"
        app:layout_constraintStart_toStartOf="@+id/btn_listaEventos"
        app:layout_constraintTop_toBottomOf="@+id/btn_listaEventos"
        android:background="@drawable/btn_menu"
        android:textColor="@color/colorTextBotonMenu"
        />
    <Button
        android:id="@+id/btn_escanerQR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/menu_btnEscanerQR"
        app:layout_constraintEnd_toEndOf="@+id/btn_mis_invitaciones"
        app:layout_constraintStart_toStartOf="@+id/btn_mis_invitaciones"
        app:layout_constraintTop_toBottomOf="@+id/btn_mis_invitaciones"
        android:background="@drawable/btn_menu"
        android:textColor="@color/colorTextBotonMenu"/>

</androidx.constraintlayout.widget.ConstraintLayout>