<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentacion.DetalleEventoActivity"
    android:background="@color/colorFondoCard">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?attr/colorPrimary"
        android:backgroundTint="@color/color1DetalleEvento"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/color3DetalleEvento"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/detalleEvento_tvInvitados"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/divisor2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="3dp"
                android:background="@color/colorDivisorDetalleEvento"></LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/color2DetalleEvento"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/color1DetalleEvento"


        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTextoDetalleEvento"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tvNombre"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre">

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/detalleEvento_tvEvento"
                android:textColor="@color/colorTextoDetalleEvento"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textColor="@color/colorTextoDetalleEvento"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTextoDetalleEvento"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tvNombre"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/tvNombre">

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detalleEvento_tvDescripcion"
                android:textColor="@color/colorTextoDetalleEvento"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/tvNombre"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="200dp"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:text="TextView"
                android:textColor="@color/colorTextoDetalleEvento"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTextoDetalleEvento"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tvDescripcion"
                app:layout_constraintStart_toStartOf="@+id/tvDescripcion"
                app:layout_constraintTop_toBottomOf="@+id/tvDescripcion"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:background="@color/color2DetalleEvento"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="1dp"></LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_view_invitados"
        android:layout_width="match_parent"
        android:layout_height="435dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>